src/test/ui/libstd-case-typo/env.stderr
error[E0412]: cannot find type `args` in this scope
  --> $DIR/env.rs:4:18
   |
LL | fn test_args(_x: args){}
   |                  ^^^^ not found in this scope
   |
help: did you mean `std::env::Args`?
   |
LL | fn test_args(_x: std::env::Args){}
   |                  ^^^^^^^^^^^^^^

error[E0412]: cannot find type `Argsos` in this scope
  --> $DIR/env.rs:6:20
   |
LL | fn test_argsos(_x: Argsos){}
   |                    ^^^^^^ not found in this scope
   |
help: did you mean `std::env::ArgsOs`?
   |
LL | fn test_argsos(_x: std::env::ArgsOs){}
   |                    ^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `Splitpaths` in this scope
  --> $DIR/env.rs:8:16
   |
LL | fn test_sp(_x: Splitpaths<'_>){}
   |                ^^^^^^^^^^ not found in this scope
   |
help: did you mean `std::env::SplitPaths`?
   |
LL | fn test_sp(_x: std::env::SplitPaths<'_>){}
   |                ^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `vars` in this scope
  --> $DIR/env.rs:10:18
   |
LL | fn test_vars(_x: vars){}
   |                  ^^^^ not found in this scope
   |
help: did you mean `std::env::Vars`?
   |
LL | fn test_vars(_x: std::env::Vars){}
   |                  ^^^^^^^^^^^^^^

error[E0412]: cannot find type `Varsos` in this scope
  --> $DIR/env.rs:12:20
   |
LL | fn test_varsos(_x: Varsos){}
   |                    ^^^^^^ not found in this scope
   |
help: did you mean `std::env::VarsOs`?
   |
LL | fn test_varsos(_x: std::env::VarsOs){}
   |                    ^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0412`.
